--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.FireStorageAdvanced"
         tools:targetApi="31">
         <activity
+            android:name=".ui.xml.list.ListXmlActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.compose.upload.UploadComposeActivity"
             android:exported="false" />
         <activity
@@ -28,14 +31,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
-            android:authorities="com.david.glez.firestorageadvanced.provider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="com.david.glez.firestorageadvanced.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/path_provider"/>
+                android:resource="@xml/path_provider" />
         </provider>
     </application>
+
 </manifest>
